Revise README.md for project clarity and updates
Updated project description and features in README.md for clarity and detail.